# dingo

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  README.md  README_experiments.txt  build.py  dockerfile  embl_model_convert.m  pyproject.toml  requirements.txt  setup.py
VBOF/: Maximizing for biomass, biomass ~ VBOF.html  Maximizing for vbof, VBOF ~ GK1.html  Maximizing for vbof, biomass ~ GK1.html  compute_copula.R  plot_example.R
dingo/: CommunityMetabolicNetwork.py  CommunityPolytopeSampler.py  MetabolicNetwork.py  PolytopeSampler.py  __init__.py  __main__.py  dingocpp.cpp  fba.py  fva.py  gurobi_based_implementations.py  illustrations.py  imp-16.py  inner_ball.py  loading_models.py  metabolic_network.py  nullspace.py  parser.py  pipelines.py  pipelines_new.py  sampler.py  scaling.py  utils.py  volestipy.pyx
doc/: README.md  documentation.md  documentation_main.md  documentation_package.md  polyround_hopsy_tests.ipynb
ext_data/: README.md  RECON1.json  e_coli_core_dingo.mat  generate_iAB_covid_steady_states.py  iAB_AMO1410_SARS_CoV_2.mat  iAB_RBC_283.json  iAB_RBC_283.xml  iAF1260.json  iAT_PLT_636.json  iBWG_1329.json  iEC1344_C.json  iHN637.json  iHN637.xml  iJN678.json  iJN746.json  iJO1366.json  iJR904.json  iLJ478.json  iLJ478.xml  iML1515.json  iNF517.json  iNF517.xml  iSB619.json  iSB619.xml  iSDY_1059.json  matlab_model_wrapper.m  test_script.py
misha/: setup.py
rhino/: setup.py
src/: fva.py  loading_models.py  scaling.py  volestipy.pyx
tests/: README.md  dingo_all_the_way.py  dingo_on_polyrounded_polyt.py  experiments.py  fba.py  max_ball.py  (+18 more)
(+29 files in other folders)
