[tool.poetry]
name = "dingo"
version = "0.1.0"
description = "A python library for metabolic networks sampling and analysis. dingo is part of GeomScale project"
authors = ["Apostolos Chalkis <tolis.chal@gmail.com>"]
build = 'build.py'

[tool.poetry.dependencies]
python = "^3.8"
sparseqr = {git = "https://github.com/yig/PySPQR.git"}
simplejson = "^3.17.2"
Cython = "^0.29.22"
numpy = "^1.20.1"
scipy = "^1.6.1"
argparse = "^1.4.0"
matplotlib = "^3.4.1"
cobra = "^0.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "cython", "numpy==1.20.1"]
build-backend = "poetry.core.masonry.api"
